--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3270,6 +3270,30 @@
                 android:value="com.android.settings.gestures.GlobalActionsPanelSettings" />
         </activity>
 
+        <!-- LotusOS -->
+        <activity android:name=".Settings$LotusSettingsActivity"
+            android:label="@string/lotus_settings_title"
+            android:icon="@drawable/ic_lotus"
+            android:taskAffinity="">
+            <intent-filter android:priority="1">
+                <action android:name="com.lotus.settings.LotusSettings" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.VOICE_LAUNCH" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.homepage" />
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.lotus.settings.LotusSettings" />
+            <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
+                android:value="true" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/lotus_settings_summary"/>
+        </activity>
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
