Settings: Gesture Anywhere [3/3]
Change-Id: Icc705e1206453b2d12526ffb5a509b945582bcc9

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3407,6 +3407,11 @@
             <meta-data android:name="com.android.settings.summary"
                 android:resource="@string/lotus_settings_summary"/>
         </activity>
+
+        <!-- Gesture Anywhere -->
+        <activity android:name="com.lotus.settings.gestureanywhere.GestureAnywhereBuilderActivity" />
+        <activity android:name="com.lotus.settings.gestureanywhere.GestureAnywhereCreateGestureActivity" />
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
